fix a couple of mistakes

--- a/final-project/code/configs/default.cfg
+++ b/final-project/code/configs/default.cfg
@@ -19,7 +19,7 @@
     },
     {
       "width": 4761,
-      "droupout": 0.5
+      "dropout": 0.5
     }],
    "nonlinearity": "rectify",
    "learning_rate": 1e-4,
