add training loss and rmse (with l1/l2 loss!=rmse).  Aggregate feature-group loss/rmse's.

--- a/final-project/code/configs/default_w_l1_and_l2.cfg
+++ b/final-project/code/configs/default_w_l1_and_l2.cfg
@@ -26,9 +26,12 @@
     {
       "width": 1024
     }],
-   "nonlinearity": "rectify",
-   "learning_rate": 1e-4,
-   "momentum": 0.9,
-   "l1": true,
-   "l2": true
+  "nonlinearity": "rectify",
+  "output_nonlinearity": "rectify",
+  "log_learning_rate_start": 1e-4,
+  "log_learning_rate_end": 1e-8,
+  "momentum_start": 0.9,
+  "momentum_end": 0.9999,
+  "l1": true,
+  "l2": true
 }
