reformat to be cleaner

--- a/final-project/code/configs/6_level_inverted_hourglass_reg.cfg
+++ b/final-project/code/configs/6_level_inverted_hourglass_reg.cfg
@@ -2,8 +2,8 @@
   "batchsize": 256,
   "conv": [
     {
-      "filter_count": 32, 
-      "filter_size": [3, 3], 
+      "filter_count": 32,
+      "filter_size": [3, 3],
       "pooling_size": [2, 2]
     },
     {
@@ -28,8 +28,8 @@
     }],
   "l1": true,
   "l2": true,
-  "learning_rate_end": 1e-08,
-  "learning_rate_start": 0.0001,
+  "learning_rate_end": 1e-8,
+  "learning_rate_start": 1e-4,
   "momentum_end": 0.9999,
   "momentum_start": 0.9,
   "nonlinearity": "rectify"
