--- a/final-project/code/configs/6_level_inverted_hourglass_reg.cfg
+++ b/final-project/code/configs/6_level_inverted_hourglass_reg.cfg
@@ -27,9 +27,9 @@
       "width": 512
     }],
   "l1": true,
-  "l2": true,
-  "learning_rate_end": 1e-8,
-  "learning_rate_start": 1e-4,
+  "l2": false,
+  "learning_rate_end": 5e-9,
+  "learning_rate_start": 5e-6,
   "momentum_end": 0.9999,
   "momentum_start": 0.9,
   "nonlinearity": "rectify"
